--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "calculator-mcp",
+  "name": "@tech-sushant/calculator-mcp",
   "version": "1.0.0",
   "description": "A simple Model Context Protocol calculator server",
+  "mcpName":"io.github.tech-sushant/calculator-mcp",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
@@ -9,7 +10,11 @@
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts"
   },
-  "keywords": ["mcp", "calculator", "model-context-protocol"],
+  "keywords": [
+    "mcp",
+    "calculator",
+    "model-context-protocol"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -19,5 +24,14 @@
     "@types/node": "^20.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tech-sushant/calculator-mcp.git"
+  },
+  "types": "./dist/index.d.ts",
+  "bugs": {
+    "url": "https://github.com/tech-sushant/calculator-mcp/issues"
+  },
+  "homepage": "https://github.com/tech-sushant/calculator-mcp#readme"
 }
